--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
   edge: true
   provider: elasticbeanstalk
   region: ap-southeast-2
-  app: multi-docer
+  app: multi-docker
   env: MultiDocker-env
   bucket_name: elasticbeanstalk-ap-southeast-2-510871749779
   bucket_path: docker-multi
