--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t batnasan/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true batnasan/docker-react npm run test -- --coverage
+  - docker run -e CI=true batnasan/react-test npm run test -- --coverage
 
 deploy:
   provider: script
