--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,9 +5,28 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  tls:
+    - hosts:
+        - multi-k8s.batnasan.com
+        - www.multi-k8s.batnasan.com
+      secretName: multi-k8s-batnasan-com
   rules:
-    - http:
+    - host: multi-k8s.batnasan.com
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
+    - host: www.multi-k8s.batnasan.com
+      http:
         paths:
           - path: /?(.*)
             backend:
